name:                imagesize
version:             0.1.0.0
synopsis:            Read the sizes of images
-- description:
license:             BSD3
license-file:        LICENSE
author:              NanoTech
maintainer:          nanotech@nanotechcorp.net
-- copyright:
category:            Graphics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules: Graphics.ImageSize
  -- other-modules:
  -- other-extensions:
  build-depends: base                  >= 4.7 && < 4.8
               , attoparsec            >= 0.11 && < 0.12
               , bytestring            >= 0.10 && < 0.11
  -- hs-source-dirs:
  default-language:    Haskell2010
