name:                imagesize
version:             0.1.0.0
synopsis:            Read the sizes of images
-- description:
license:             BSD3
license-file:        LICENSE
author:              NanoTech <nanotech@nanotechcorp.net>
maintainer:          NanoTech <nanotech@nanotechcorp.net>
copyright:           2014 NanoTech
category:            Graphics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  default-language: Haskell2010
  exposed-modules: Graphics.ImageSize
  -- hs-source-dirs:
  -- other-modules:
  -- other-extensions:
  ghc-options: -Wall
  build-depends: base                  >= 4.6 && < 5
               , attoparsec            >= 0.10 && < 0.14
               , attoparsec-binary     >= 0.1 && < 0.3
               , bytestring            >= 0.9 && < 0.11

test-suite tests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  ghc-options: -Wall
  build-depends: base                  >= 4.6 && < 5
               , attoparsec            >= 0.10 && < 0.14
               , bytestring            >= 0.9 && < 0.11
               , imagesize
