name:                imagesize
version:             0.1.0.0
synopsis:            Read the sizes of images
-- description:
license:             BSD3
license-file:        LICENSE
author:              NanoTech
maintainer:          nanotech@nanotechcorp.net
-- copyright:
category:            Graphics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules: Graphics.ImageSize
  -- other-modules:
  -- other-extensions:
  build-depends: base                  >= 4.6 && < 5
               , attoparsec            >= 0.10 && < 0.14
               , attoparsec-binary     >= 0.1 && < 0.3
               , bytestring            >= 0.9 && < 0.11
  -- hs-source-dirs:
  default-language:    Haskell2010

test-suite tests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  ghc-options: -Wall
  build-depends: base                  >= 4.6 && < 5
               , attoparsec            >= 0.10 && < 0.14
               , bytestring            >= 0.9 && < 0.11
               , imagesize
